2001-07-23  Bradford Hovinen  <hovinen@ximian.com>

	* applier.c (renderer_render_wallpaper): Don't adjust pixmap width

2001-07-20  Chema Celorio  <chema@celorio.com>

	* RELEASE : 1.5.0

2001-07-19  Chema Celorio  <chema@celorio.com>

	* Makefile.am (cappletname): make distcheck love

2001-07-19  Richard Hestilow  <hestilow@ximian.com>

	* main.c: Add compatibility "-b" argument.

2001-07-19  Richard Hestilow  <hestilow@ximian.com>
	
	* applier.c: remove debugging spew

	* main.c (get_legacy_settings): Fix for FileName corba type.
	(apply_settings): Check to make sure applier exists.

2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Rename binary to background-properties

2001-07-19  Richard Hestilow  <hestilow@ximian.com>
	
	* background-properties.desktop.in.in: Change exec string for
	bonobo-conf.
 
2001-07-19  Richard Hestilow  <hestilow@ximian.com>
	
	* bonobo-conf rewrite.
 
2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Remove SUBDIRS
	(background_properties_SOURCES): Added missing applier.h

	* prefs-widget.c: Remove references to auto apply feature

	* applier.c (get_geometry): Use vwidth and vheight rather than
	dwidth and dheight when computing aspect ratio
	(get_geometry): Adjust rwidth and rheight according to above change

	* preferences.c (preferences_changed): Disable auto-apply

	* background-properties.glade: Remove apply automatically check
	button; change "More Solid" to "More Opaque"

2001-07-17  Chema Celorio  <chema@celorio.com>

	* start
