@@ -1,3 +1,7 @@
+2001-07-24  Richard Hestilow  <hestilow@ximian.com>
+	
+	* main.c (main): Pass in legacy files to capplet_init.
+
 2001-07-20  Chema Celorio  <chema@celorio.com>
 
 	* RELEASE : 1.5.0
