@@ -1,3 +1,7 @@
+2001-07-24  Richard Hestilow  <hestilow@ximian.com>
+	
+	* main.c (main): Pass in legacy files to capplet_init.
+
 2001-07-23  Bradford Hovinen  <hovinen@ximian.com>
 
 	* applier.c (renderer_render_wallpaper): Don't adjust pixmap width
